<resources>
    <string name="app_name">IMChat</string>
    <string name="mAccount">账号:</string>
    <string name="mPassword">密码:</string>
    <string name="mLogin">登陆</string>
    <string name="mRememberPWD">记住密码</string>
    <string name="mForgetPWD">忘记密码</string>
    <string name="mRegister">注册</string>
    <string name="mAccountHint">请输入账号</string>
    <string name="mPasswordHint">请输入密码</string>
    <string name="mPasswordConfirm">确认:</string>
    <string name="cancel">取消</string>
</resources>
